# tokenizers

./: .build  .gitignore  404.html  CHANGELOG.md  README.md  RELEASE.md  Tokenizers.AddedToken.html  Tokenizers.DecodeStream.html  Tokenizers.Decoder.html  Tokenizers.Encoding.Transformation.html  Tokenizers.Encoding.html  Tokenizers.HTTPClient.html  Tokenizers.Model.BPE.html  Tokenizers.Model.Unigram.html  Tokenizers.Model.WordLevel.html  Tokenizers.Model.WordPiece.html  Tokenizers.Model.html  Tokenizers.Native.html  Tokenizers.Normalizer.html  Tokenizers.PostProcessor.html  Tokenizers.PreTokenizer.html  Tokenizers.Tokenizer.html  Tokenizers.Trainer.html  Tokenizers.epub  Tokenizers.html  api-reference.html  flake.nix  index.html  license.html  mix.exs  pretrained.html  pretrained.livemd  quicktour.html  search.html  training.html
.github/workflows/: ci.yml  gh-pages.yml  release.yml  rust-ci.yml
lib/: tokenizers.ex
lib/tokenizers/: added_token.ex  decode_stream.ex  decoder.ex  encoding.ex  http_client.ex  model.ex  native.ex  normalizer.ex  post_processor.ex  pre_tokenizer.ex  shared.ex  tokenizer.ex  (+1 more)
native/ex_tokenizers/: Cargo.toml  Cross.toml  README.md
native/ex_tokenizers/.cargo/: config  config.toml
native/ex_tokenizers/scripts/: install-cross-deps
native/ex_tokenizers/src/: added_token.rs  decode_stream.rs  decoders.rs  encoding.rs  error.rs  lib.rs  model.rs  models.rs  normalizers.rs  post_processors.rs  pre_tokenizers.rs  tokenizer.rs  trainers.rs  util.rs
notebooks/: pretrained.livemd  quicktour.livemd  training.livemd
test/: tokenizers_test.exs
(+19 files in other folders)
