[package]
name = "ex_tokenizers"
version = "0.3.1"
authors = []
edition = "2021"

[lib]
name = "ex_tokenizers"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
rustler = "0.27.0"
thiserror = "1"
regex = "1.5.5"
tokenizers = { version = "0.13.3", default-features = false, features = ["default"]}
