[package]
name = "ex_tokenizers"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "ex_tokenizers"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
rustler = "0.36.1"
thiserror = "2"
tokenizers = { version = "0.21.1", default-features = false, features = ["onig", "esaxx_fast"]}
serde = { version = "1.0", features = [ "rc", "derive" ] }
